--- a/doc/c1.md
+++ b/doc/c1.md
@@ -6,10 +6,7 @@ _Add here an extended decription of the assignment_
 
 ## Group _xx_
 
-_Don't forget to add the group elements_
-
-* Marco Amaro Oliveira [@MarcoOliveira](https://github.com/marcoamarooliveira)
-* Other team members
+* members
 
 
 
