--- a/doc/c1.md
+++ b/doc/c1.md
@@ -1,12 +1,13 @@
-# C1 : My work assignment title
+# C1 : MegaSport
 
 ## Description
-_Add here an extended decription of the assignment_
+Este Projeto tem como objetivo desenvolver um conjunto de páginas estáticas ou dinâmicas sendo que estas páginas vão representar uma loja de desporto, existe já uma pequena estrutura previamente pensada pelos membros onde se decidiu que o ideal seria um index com a descrição da loja e mais um conjunto de elementos informativos relacionados com a loja, separados em secções e com uma secção específica para o cliente escolher se quer ver produtos de homem ou mulher, depois o cliente seria redirecionado para o que seria a segunda página("listagem") onde estariam listados todos os produtos, com pequenos detalhes como preço, tamanho, categoria para mulher ou homem, após o cliente selecionar um produto ele seria redirecionado para a página a que chamamos de "detalhe" onde o cliente poderá ver o produto mais detalhadamente, aqui o cliente poderá encontrar imagens relacionadas com o produto, uma descrição precisa do produto, o seu preço, e algumas outras características que não se encontram na "listagem", haverá ainda uma quarta página, acreditamos que seria interessante fazer um formulário para receber a opinião do cliente à cerca dos produtos da loja e da plataforma desenvolvida, este formulario tem ainda uma funcionalidade onde os dados são guardados num pdf e por sua vez o pdf é guardado na pasta local do projecto. Sublinho ainda que todas as páginas terão um header e um footer. O header irá conter dois menus, um onde o utilizador pode escolher a secção que pretende visualizar (Homem ou mulher), no submenu o utilizador poderá encontrar um conjunto de hiperligações que o redirecionará para a modalidade que ele pretende.
 
 
-## Group _xx_
-
-* members
+## Group 05
+* Joel Da Silva Araújo a034520 [@JoelAraujoGit](https://github.com/JoelAraujoGit)
+* Marco José Silva Araújo a035188 [@MarcoAraujo16](https://github.com/MarcoAraujo16)
+* Diogo Silva Carneiro a035189 [@Diogosc27](https://github.com/Diogosc27)
 
 
 
