--- a/doc/c3.md
+++ b/doc/c3.md
@@ -1,6 +1,9 @@
-# C3 : Product
+# C3 : Produto
 
-_Add a product description_
+A MegaSport é uma loja fisica e o site da mesma foi desenvolvido a pensar nesse mesmo promenor, ou seja, este produto tem como objectivo ser apenas um complemento para mostrar o que existe na loja.
+A MegaSport é constituida por 4 paginas HTML:
+ *Listagem
+
 
 ## 3.1 Instalation
 
