--- a/doc/c3.md
+++ b/doc/c3.md
@@ -3,7 +3,16 @@
 A MegaSport é uma loja fisica e o site da mesma foi desenvolvido a pensar nesse mesmo promenor, ou seja, este produto tem como objectivo ser apenas um complemento para mostrar o que existe na loja.
 A MegaSport é constituida por 4 paginas HTML:
 
-* Listagem
+* Elementos comuns a todas as Páginas HTML:
+    *a
+* Index:
+    *a
+* Listagem:
+    *a
+* Detalhe:
+    *a
+* Formulário:
+    *a
 
 
 ## 3.1 Instalation
