--- a/doc/c3.md
+++ b/doc/c3.md
@@ -4,15 +4,23 @@ A MegaSport é uma loja fisica e o site da mesma foi desenvolvido a pensar nesse
 A MegaSport é constituida por 4 paginas HTML:
 
 * Elementos comuns a todas as Páginas HTML:
-    * a
-* Index:
-    * a
-* Listagem:
-    * a
-* Detalhe:
-    * a
-* Formulário:
-    * a
+    * Footer:
+        * o footer contem uma seção onde o cliente pode clicar e será redirecionado para o form.html de forma a dar a sua opinião á cerca do assunto de sua preferência. Logo abaixo o cliente pode encontraduas colunas informativas, numa delas um tópico que o leva a secção de informação sobre a loja, na outra pode-se encontrar os contactos da loja.
+    
+    * Header
+        * O header contem dois menus, no primeiro o cliente pode filtrar por homem ou mulher e no segundo menu o cliente pode escolher a modalidade desportiva a que os produtos estão associados, se for de preferencia do cliente usar apenas um dos menus, pode faze-lo. O header tem ainda um logotipo que ao clicar nele redireciona o cliente para a home page.
+
+    * Index:
+        * O index contem um banner informativo, de seguida conteúdo informativo sobre a loja, a baixo uma secção onde os cliente podem escolher ver o produtos de uma modalidade ja filtrada por genero e no final incluiu-se ainda o horário de funcionamento da loja. 
+    
+    * Listagem:
+        * Na listagem o cliente pode encontrar os dois parametros de filtragem para se situar no conteúdo que lhe está a ser apresenado e ainda um butão de limpar os filtros seleccionados anteriormente. São ainda listados todos os produtos conforme os filtros aplicados. O cliente ao selecionar um produto será redirecionado para o detalhe de produto.
+
+    * Detalhe:
+        * No detalhe de produto o cliente pode encontrar o produto que selecionou mas com mais informações ou seja mais detalhado.
+
+    * Formulário:
+        * No formulário encontra-se um conjunto de campos a ser preenchidos de forma a que o cliente possa expressar a sua opinião. No final de todos os campos estárem preenchidos o cliente deve submeter a sua opinião e será gerado um pdf com a sua opinião na pasta opinioes dentro da pasta raiz.
 
 
 ## 3.1 Instalation
