--- a/doc/c3.md
+++ b/doc/c3.md
@@ -5,22 +5,22 @@ A MegaSport é constituida por 4 paginas HTML:
 
 * Elementos comuns a todas as Páginas HTML:
     * Footer:
-        * o footer contem uma seção onde o cliente pode clicar e será redirecionado para o form.html de forma a dar a sua opinião á cerca do assunto de sua preferência. Logo abaixo o cliente pode encontraduas colunas informativas, numa delas um tópico que o leva a secção de informação sobre a loja, na outra pode-se encontrar os contactos da loja.
+        * O footer contém uma secção onde o cliente pode clicar e será redirecionado para o form.html de forma a dar a sua opinião à cerca do assunto de sua preferência. Logo abaixo o cliente pode encontr duas colunas informativas, numa delas um tópico que o leva a secção de informação sobre a loja, na outra pode-se encontrar os contactos da loja.
     
     * Header
-        * O header contem dois menus, no primeiro o cliente pode filtrar por homem ou mulher e no segundo menu o cliente pode escolher a modalidade desportiva a que os produtos estão associados, se for de preferencia do cliente usar apenas um dos menus, pode faze-lo. O header tem ainda um logotipo que ao clicar nele redireciona o cliente para a home page.
+        * O header contém dois menus, no primeiro o cliente pode filtrar por homem ou mulher e no segundo menu o cliente pode escolher a modalidade desportiva a que os produtos estão associados, se for de preferência do cliente usar apenas um dos menus, pode faze-lo. O header tem ainda um logótipo que ao clicar nele redireciona o cliente para a home page.
 
     * Index:
-        * O index contem um banner informativo, de seguida conteúdo informativo sobre a loja, a baixo uma secção onde os cliente podem escolher ver o produtos de uma modalidade ja filtrada por genero e no final incluiu-se ainda o horário de funcionamento da loja. 
+        * O index contém um banner informativo, de seguida conteúdo informativo sobre a loja, a baixo uma secção onde os cliente podem escolher ver o produtos de uma modalidade já filtrada por género e no final incluíu-se ainda o horário de funcionamento da loja. 
     
     * Listagem:
-        * Na listagem o cliente pode encontrar os dois parametros de filtragem para se situar no conteúdo que lhe está a ser apresenado e ainda um butão de limpar os filtros seleccionados anteriormente. São ainda listados todos os produtos conforme os filtros aplicados. O cliente ao selecionar um produto será redirecionado para o detalhe de produto.
+        * Na listagem o cliente pode encontrar os dois parâmetros de filtragem para se situar no conteúdo que lhe está a ser apresentado e ainda um botão de limpar os filtros seleccionados anteriormente. São ainda listados todos os produtos conforme os filtros aplicados. O cliente ao selecionar um produto será redirecionado para o detalhe de produto.
 
     * Detalhe:
         * No detalhe de produto o cliente pode encontrar o produto que selecionou mas com mais informações ou seja mais detalhado.
 
     * Formulário:
-        * No formulário encontra-se um conjunto de campos a ser preenchidos de forma a que o cliente possa expressar a sua opinião. No final de todos os campos estárem preenchidos o cliente deve submeter a sua opinião e será gerado um pdf com a sua opinião na pasta opinioes dentro da pasta raiz.
+        * No formulário encontra-se um conjunto de campos a ser preenchidos de forma a que o cliente possa expressar a sua opinião. No final de todos os campos estarem preenchidos o cliente deve submeter a sua opinião e será gerado um pdf com a sua opinião na pasta opiniões dentro da pasta raiz.
 
 
 ## 3.1 Instalation
