--- a/doc/c3.md
+++ b/doc/c3.md
@@ -23,13 +23,20 @@ A MegaSport é constituida por 4 paginas HTML:
         * No formulário encontra-se um conjunto de campos a ser preenchidos de forma a que o cliente possa expressar a sua opinião. No final de todos os campos estarem preenchidos o cliente deve submeter a sua opinião e será gerado um pdf com a sua opinião na pasta opiniões dentro da pasta raiz.
 
 
-## 3.1 Instalation
+## 3.1 Instalação
 
-_Describe the proper way to install the product. Start by a checkout of the project in Github._
+Para efetuar a instalação é necessario aceder á pasta raiz do projeto e fazer o download da mesma, deve-se ainda ter o xamp ou wamp para dar host ao site e desta forma ser possivel executar corretamente todo o projeto pois por exemplo o live server do visual studio code nao corre o ficheiro PHP.
 
-## 3.2 Usage
+## 3.2 Uso do site
 
-_If any, please add usage instructions, such as required authentication, or product limitations_
+Para usar o site da Mega sport basta abrir na página principal e tudo se torna bastante intuitivo. Na home page é possivem seguir dois caminhos:
+    * Selecionar uma das opções para ver produtos(no header ou na secção homem/mulher) e será redirecionado para uma listagem de produtos que serão apresentados conforme o que foi selecionado anteriormente.
+    * Selecionar dar opinião no footer e será redirecionado para o formulário de opinião para expressar o seu agrado/desagrado à cerca de um assunto.
+O restante é apenas informativo.
+
+Apos passar para a listagem, o cliente pode ver os produtos listados e pode ainda selecionar um dos produtos para ver o mesmo com informação mais detalhada.
+Pode ainda selecionar dar opinião no footer e será redirecionado para o formulário de opinião para expressar o seu agrado/desagrado à cerca de um assunto.
+
 
 ## 3.3 Application/Product help
 
