--- a/doc/c3.md
+++ b/doc/c3.md
@@ -25,19 +25,19 @@ A MegaSport é constituida por 4 paginas HTML:
 
 ## 3.1 Instalação
 
-Para efetuar a instalação é necessario aceder á pasta raiz do projeto e fazer o download da mesma, deve-se ainda ter o xamp ou wamp para dar host ao site e desta forma ser possivel executar corretamente todo o projeto pois por exemplo o live server do visual studio code nao corre o ficheiro PHP.
+Para efetuar a instalação é necessário aceder à pasta raiz do projeto e fazer o download da mesma, deve-se ainda ter o xampp ou wamp para dar host ao site e desta forma ser possivel executar corretamente todo o projeto pois por exemplo o live server do visual studio code não corre o ficheiro PHP.
 
 ## 3.2 Uso do site
 
-Para usar o site da Mega sport basta abrir na página principal e tudo se torna bastante intuitivo. Na home page é possivem seguir dois caminhos:
+Para usar o site da MegaSport basta abrir na página principal e tudo se torna bastante intuitivo. Na home page é possivel seguir dois caminhos:
 
-* Selecionar uma das opções para ver produtos(no header ou na secção homem/mulher) e será redirecionado para uma listagem de produtos que serão apresentados conforme o que foi selecionado anteriormente.
+* Selecionar uma das opções para ver produtos (no header ou na secção homem/mulher) e será redirecionado para uma listagem de produtos que serão apresentados conforme o que foi selecionado anteriormente.
 
 * Selecionar dar opinião no footer e será redirecionado para o formulário de opinião para expressar o seu agrado/desagrado à cerca de um assunto.
 
 O restante é apenas informativo.
 
-Apos passar para a listagem, o cliente pode ver os produtos listados e pode ainda selecionar um dos produtos para ver o mesmo com informação mais detalhada.
+Após passar para a listagem, o cliente pode ver os produtos listados e pode ainda selecionar um dos produtos para ver o mesmo com informação mais detalhada.
 Pode ainda selecionar dar opinião no footer e será redirecionado para o formulário de opinião para expressar o seu agrado/desagrado à cerca de um assunto.
 
 
