--- a/doc/c3.md
+++ b/doc/c3.md
@@ -40,9 +40,9 @@ O restante é apenas informativo.
 Após passar para a listagem, o cliente pode ver os produtos listados e pode ainda selecionar um dos produtos para ver o mesmo com informação mais detalhada.
 Pode ainda selecionar dar opinião no footer e será redirecionado para o formulário de opinião para expressar o seu agrado/desagrado à cerca de um assunto.
 
-Entrando no detalhe é possivel perceber que todo o conteudo é apenas informativo e representativo. o cliente tem a opção de reverter para a main page ou para o formulário de opinião.
+Entrando no detalhe é possivel perceber que todo o conteúdo é apenas informativo e representativo. O cliente tem a opção de reverter para a main page ou para o formulário de opinião.
 
-No formulário de opinião o cliente deve de preencheer todos os campos e clicar no botão submeter, desta forma a sua opinião foi submetida. Será apresentada a sua opinião estruturada num pdf para o cliente ver e será gurdado esse mesmo pdf numa pasta local. 
+No formulário de opinião o cliente deve de preencheer todos os campos e clicar no botão submeter, desta forma a sua opinião foi submetida. Será apresentada a sua opinião estruturada num pdf para o cliente ver e será guardado esse mesmo pdf numa pasta local. 
 
 
 ## 3.3 Application/Product help
