--- a/doc/c2.md
+++ b/doc/c2.md
@@ -1,44 +1,52 @@
-# C2 : User Interface
+# C2 : Interface do utilizador
 
-_Describe how you will organize infomation in the website. Remember that your website needs to be responsive. Please go "Mobile first"_
 
 ## Interface and Common features
-_Add here your creative process results using sketchs or wireframes (or even both)_
-
-### Sketchs
-
-_Your sketch_
-
-| | |
-:---: | :---:
-|
-Always add a description to help the user understand the figure |  Always add a description to help the user understand the figure 
-
-
 
 ### Wireframes
 
-_Your wireframes with a description_  
+_Abaixo apresentamos os wireframes do nosso site_  
 
 | |
 :---:
-|
-Always add a description to help the user understand the figure |
+![Wireframe home page](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeHomePage.png)
+|Wireframe Home page -> Este wireframe representa a home page do nosso website sendo constituido por uma navbar onde podemos escolher o sexo e o tipo de acessórios para desporto
+seguindo-se um banner de anuncio. Apresenta tambem uma secção de sobre a loja. Seguido da escolhe de sexo e tipo de acessorio que prentende pesquisar.Apresentamos ainda o horário de funcionamento da loja.E o redirecionamento para um formulário de opinião para que o utilizador nos posso dar a sua opinião sobre a loja.Seguindo-se o footer onde apresentamos o logotipo da marca, o redirecionamento para o sobre nós e para a lojas e ainda os contactos.|
 
+![Wireframe listagem](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeListagem.png)
+|Wireframe Listagem -> Este wireframe representa a pagina listagem onde seram mostrados os produtos que correspondem aos filtros selecionados pelo utiliador.|
+
+![Wireframe detalho produto](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeDetalheProduto.png)
+|Wireframe Detalho Produto -> Este wireframe representa a pagina de detalhes do produto onde será mostrado o produto anteriormente selecionado na pagina anterior listagem, e os seus detalhes tais como: o preço, o tamanho e o sexo ao qual se direciona o produto. |
+
+![Wireframe Formulário](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeFormulario.png)
+|Wireframe Formulario -> Este wireframe representa o formulário onde o utilizador poderá dar-nos a sua opinião sobre a loja. |
+
+### Resultado final e comparação com o estudo inicia
+ Home Page
+![HomePage](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage1.PNG)
+![HomePage2](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage2.PNG)
+![HomePage3](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage3.PNG)
+
+Listagem
+![Listagem](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Listagem1.PNG)
+
+Detalhes Produto
+![DetalhesProduto](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/DetalhesProduto.PNG)
+
+Formulário
+![Formulário](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Formulário.PNG)
+
+
+Ao comparar-mos o resultado final com os wireframes podemos conprovar que foi-nos possível manter as intenções iniciais para o nosso site.
 
 ### Sitemap
 
-_Add a diagram of your (Visual) sitemap. I'm not expecting a [XML Sitemap](https://developers.google.com/search/docs/advanced/sitemaps/build-sitemap#expandable-1) ([Wikipedia](https://en.wikipedia.org/wiki/Sitemaps))_  
+_Abaixo apresentamos os wireframes do nosso site_  
+![Fluxo entre webpages](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Fluxo%20site%20TI.jpeg)
 
-_In the previous sections I'm using a table to organize the figures in the space, but it is not required_
-
-Here are two examples of a site map
-
+_No sitemap acima exibimos a interligação entre as paginas do nosso site e como o utilizador poderá chegar á pagina que prentende._
  
-Always add a description to help the user understand the figure  
-
- 
-Always add a description to help the user understand the figure  
 
 
 
