--- a/doc/c2.md
+++ b/doc/c2.md
@@ -1,7 +1,7 @@
 # C2 : Interface do utilizador
 
 
-## Interface and Common features
+## Interface e principais características
 
 ### Wireframes
 
@@ -10,13 +10,16 @@ _Abaixo apresentamos os wireframes do nosso site_
 | |
 :---:
 ![Wireframe home page](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeHomePage.png)
+
 |Wireframe Home page -> Este wireframe representa a home page do nosso website sendo constituido por uma navbar onde podemos escolher o sexo e o tipo de acessórios para desporto
 seguindo-se um banner de anuncio. Apresenta tambem uma secção de sobre a loja. Seguido da escolhe de sexo e tipo de acessorio que prentende pesquisar.Apresentamos ainda o horário de funcionamento da loja.E o redirecionamento para um formulário de opinião para que o utilizador nos posso dar a sua opinião sobre a loja.Seguindo-se o footer onde apresentamos o logotipo da marca, o redirecionamento para o sobre nós e para a lojas e ainda os contactos.|
 
 ![Wireframe listagem](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeListagem.png)
+
 |Wireframe Listagem -> Este wireframe representa a pagina listagem onde seram mostrados os produtos que correspondem aos filtros selecionados pelo utiliador.|
 
 ![Wireframe detalho produto](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeDetalheProduto.png)
+
 |Wireframe Detalho Produto -> Este wireframe representa a pagina de detalhes do produto onde será mostrado o produto anteriormente selecionado na pagina anterior listagem, e os seus detalhes tais como: o preço, o tamanho e o sexo ao qual se direciona o produto. |
 
 ![Wireframe Formulário](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeFormulario.png)
