--- a/doc/c3.md
+++ b/doc/c3.md
@@ -44,16 +44,10 @@ Entrando no detalhe é possivel perceber que todo o conteúdo é apenas informat
 
 No formulário de opinião o cliente deve de preencheer todos os campos e clicar no botão submeter, desta forma a sua opinião foi submetida. Será apresentada a sua opinião estruturada num pdf para o cliente ver e será guardado esse mesmo pdf numa pasta local. 
 
+## 3.4 Formulários
 
-## 3.3 Application/Product help
-
-_Are there any visual cues to help the navigation? Code colors? Tooltips that help the user navigate on the website?_  
-_Describe how the graphical interface is organized and how the user can move around._
-
-## 3.4 Forms
-
-_If any, how are you validating user input on the forms?_
-_Describe with examples._
+Foi implememtado um formulário com o objectivo de saber as opiniões dos utilizadores, para efetuar melhorias mais tarde. Este formulario contém os seguintes campos:
+![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Formul%C3%A1rio.PNG)
 
 ## 3.5 HTML5 and CSS3 validation
 
