--- a/doc/c3.md
+++ b/doc/c3.md
@@ -46,8 +46,9 @@ No formulário de opinião o cliente deve de preencheer todos os campos e clicar
 
 ## 3.3 Formulários
 
-Foi implememtado um formulário com o objectivo de saber as opiniões dos utilizadores, para efetuar melhorias mais tarde. Este formulario contém os seguintes campos:
+Foi implememtado um formulário com o objectivo de saber as opiniões dos utilizadores, para efetuar melhorias mais tarde.
 ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/form%20print.PNG)
+
 
 ## 3.4 HTML5 and CSS3 validation
 
