--- a/doc/c3.md
+++ b/doc/c3.md
@@ -48,6 +48,7 @@ No formulário de opinião o cliente deve de preencheer todos os campos e clicar
 
 Foi implememtado um formulário com o objectivo de saber as opiniões dos utilizadores, para efetuar melhorias mais tarde.
 ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/form%20print.PNG)
+A validação é feita toda atravez do HTMl todos os campos são "required"/obrigatórios e cada campo tem a textbox atribuida corretamente.
 
 
 ## 3.4 HTML5 and CSS3 validation
