--- a/doc/c3.md
+++ b/doc/c3.md
@@ -50,7 +50,7 @@ Foi implememtado um formulário com o objectivo de saber as opiniões dos utiliz
 
 ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/form%20print.PNG)
 
-A validação é feita toda atravez do HTMl todos os campos são "required"/obrigatórios e cada campo tem a textbox atribuida corretamente.
+A validação é feita toda atravez do HTML todos os campos são "required"/obrigatórios e cada campo tem a textbox atribuida corretamente.
 
 
 ## 3.4 HTML5 and CSS3 validation
