--- a/doc/c2.md
+++ b/doc/c2.md
@@ -3,7 +3,7 @@
 
 ## Interface e principais características
 
-### Wireframes
+### 3.1 Wireframes
 
 _Abaixo apresentamos os wireframes do nosso site_  
 
@@ -24,7 +24,7 @@ Wireframe Detalhe Produto -> Este wireframe representa a pagina de detalhes do p
 ![Wireframe Formulário](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/WireframeFormulario.png)
 Wireframe Formulario -> Este wireframe representa o formulário onde o utilizador poderá dar-nos a sua opinião sobre a loja. 
 
-### Resultado final e comparação com o estudo inicia
+### 3.2 Resultado final e comparação com o estudo inicia
 - Home Page
 ![HomePage](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage1.PNG)
 ![HomePage2](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage2.PNG)
@@ -36,13 +36,13 @@ Wireframe Formulario -> Este wireframe representa o formulário onde o utilizado
 - Detalhes Produto
 ![DetalhesProduto](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/DetalhesProduto.PNG)
 
-- Formulário
+- Fomulário
 ![Formulário](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Formulário.PNG)
 
 
 Ao comparar-mos o resultado final com os wireframes podemos conprovar que foi-nos possível manter as intenções iniciais para o nosso site.
 
-### Sitemap
+### 3.3 Sitemap
 
 _Abaixo apresentamos os wireframes do nosso site_  
 ![Fluxo entre webpages](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Fluxo%20site%20TI.jpeg)
