--- a/doc/c3.md
+++ b/doc/c3.md
@@ -55,8 +55,12 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 
 ## 3.4 HTML5 and CSS3 validation
 
-_Describe the method used to validate HTML and CSS. Don't forget to add details about the used validators. Show the validation results._
-_Add images, tables or reports of the tests performed._
+| Validação HTML | Validação CSS |
+|---|:-:|
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/indexhtmlV.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/indexcssV.PNG) |
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/indexhtmlV.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/listagemcssV.PNG) |
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/detalhehtmlV.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/detalhecssV.PNG) |
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/formhtmlV.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/formcssV.PNG) |
 
 ## 3.5 Implementation details
 
