--- a/doc/c3.md
+++ b/doc/c3.md
@@ -53,7 +53,7 @@ Foi implememtado um formulário com o objectivo de saber as opiniões dos utiliz
 A validação é feita toda atravez do HTML todos os campos são "required"/obrigatórios e cada campo tem a textbox atribuida corretamente.
 
 
-## 3.4 HTML5 and CSS3 validation
+## 3.4 HTML5 e CSS3 validação
 
 | Validação HTML | Validação CSS |
 |---|:-:|
