barra de navegação chapters

--- a/doc/c2.md
+++ b/doc/c2.md
@@ -52,5 +52,5 @@ _No sitemap acima exibimos a interligação entre as paginas do nosso site e com
 
 
 ---
-[< Previous](c1.md) | [^ Main](https://github.com/exemploTrabalho/report) | [Next >](c3.md)
+[< Anterior](c1.md) | [^ Home](https://github.com/TIWM-Grupo5-2020/Project) | [Proximo >](c3.md)
 :--- | :---: | ---: 
