--- a/doc/c3.md
+++ b/doc/c3.md
@@ -69,5 +69,5 @@ _Show here how you have fullfilled the miminum required objectives and which val
 
 
 ---
-[< Previous](c2.md) | [^ Main](https://github.com/exemploTrabalho/report) | [Next >](c4.md)
+[< Anterior](c2.md) | [^ Home](https://github.com/TIWM-Grupo5-2020/Project) | Proximo >]()
 :--- | :---: | ---: 
