--- a/doc/c1.md
+++ b/doc/c1.md
@@ -11,5 +11,5 @@ Este projeto tem como objetivo desenvolver um conjunto de páginas estáticas ou
 
 
 ---
-< Previous | [^ Main](https://github.com/TIWM-Grupo5-2020/Project) | [Next >](c2.md)
+< Anterior | [^ Home](https://github.com/TIWM-Grupo5-2020/Project) | [Proximo >](c2.md)
 :--- | :---: | ---:
