--- a/doc/c2.md
+++ b/doc/c2.md
@@ -38,28 +38,16 @@ _Abaixo apresentamos os wireframes do nosso site_
 
 ### 2.2 Resultado final e comparação com o estudo inicial
 
-#### Home Page
 
-![HomePage](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage1.PNG)
+| Nome | Desktop | Mobile |
+|---|:-:|---|
+| index | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage1.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/indexMobile1.PNG) |
+| index | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage2.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/indexMobile2.PNG) |
+| index | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage3.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/indexMobile3.PNG) |
+| listagem | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Listagem1.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/ListagemMobile.PNG) |
+| detalhe | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/DetalhesProduto.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/DetalhesProdutoMobile.PNG) |
+| form | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Formulário.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/FormulárioMobile.PNG) |
 
-![HomePage2](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage2.PNG)
-
-![HomePage3](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/HomePage3.PNG)
-
-
-#### Listagem
-
-![Listagem](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Listagem1.PNG)
-
-
-#### Detalhes Produto
-
-![DetalhesProduto](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/DetalhesProduto.PNG)
-
-
-#### Fomulário
-
-![Formulário](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/Formulário.PNG)
 
 #### Apreciação
 Ao comparar-mos o resultado final com os wireframes podemos conprovar que foi-nos possível manter as intenções iniciais para o nosso site.
