--- a/doc/c3.md
+++ b/doc/c3.md
@@ -63,9 +63,12 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/formhtmlV.PNG) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/formcssV.PNG) |
 |   | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/validation/headerfootercssV.PNG)  |
 
-## 3.5 Implementation details
+## 3.5 Detalhes de Implementação
 
-_Show here how you have fullfilled the miminum required objectives and which valorization elements you added to your work._
+### 4 páginas HTML
+| Index  | Listagem  | Detalhe  | Form  |
+|---|:-:|---|---|
+| https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/indext1.png  | https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/listagemt1.png  | https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/detalhet1.png  | https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/formt1.png  |
 
 
 ---
