--- a/doc/c3.md
+++ b/doc/c3.md
@@ -71,10 +71,24 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/indext1.png)  | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/listagemt1.png)  | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/detalhet1.png)  | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/formt1.png)  |
 
 
-## XML e XSD
+### XML e XSD
 | XML  | XSD  |
 |---|:-:|
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/xmlt2.png)  | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/xsdt2.png)  |
+
+
+### Header e Footer
+| Header/Footer | Código |
+|---------------|:------:|
+|       ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/Headert3.png)        |   ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/headercodet3.png)     |
+|       ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/footert3.png)        |   ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/footert3code.png)     |
+
+
+| section | Código |
+|---------|:------:|
+|    ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/sectiont5.png)     |    ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/sectioncodet5.png)    |
+
+
 
 ---
 [< Anterior](c2.md) | [Home](https://github.com/TIWM-Grupo5-2020/Project) | Proximo >
