--- a/doc/c3.md
+++ b/doc/c3.md
@@ -101,11 +101,16 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/laninhadat7.png)                                      | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/laninhadat7code.png)       |
 
 
-###
-| Imagem,Figure,Hyperlick | Código |
+### Imagem,Figure e Hyperlick
+| Imagem,Figure e Hyperlick | Código |
 |:-----------------------:|:------:|
 |      ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/ifhi1t8.png)                   |    ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/ifhcodet8.png)     |
 |   ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/ifhi2t8.png)      |![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/ifhcodet8.png)     |
+
+###Formulário
+| Formulário | Código |
+|:----------:|--------|
+|     ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/formt9.png)       |   ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/formcodet9.png)     |
 ---
 [< Anterior](c2.md) | [Home](https://github.com/TIWM-Grupo5-2020/Project) | Proximo >
 :--- | :---: | ---: 
