--- a/doc/c3.md
+++ b/doc/c3.md
@@ -107,10 +107,30 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 |      ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/ifhi1t8.png)                   |    ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/ifhcodet8.png)     |
 |   ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/ifhi2t8.png)      |![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/ifhcodet8.png)     |
 
-###Formulário
+### Formulário
 | Formulário | Código |
 |:----------:|--------|
 |     ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/formt9.png)       |   ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/formcodet9.png)     |
+
+
+### Seletores
+|                   nome                  | Código |
+|:---------------------------------------:|--------|
+| classe                                  | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/classet10.png)  |
+| ID                                      | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/idt10.png)  |
+| Pseudo-Classe                           | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/pseudoclasset10.png)  |
+| Media Queries                           | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/mediaqueriest10.png)  |
+| Pseudo-elemento                         | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/pseudo-elementot10.png)  |
+| Combinador + propriedades texto e fonte | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/Combinador%2Bpropriedades%20texto%20e%20fontet10.png)  |
+| Edição de estilos  de uma lista         | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/eestiloslistat10.png)  |
+| Margin                                  | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/margint10.png)  |
+| Border                                  | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/bordert10.png)  |
+| Padding                                 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/paddingt10.png)  |
+| Content                                 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/edittable%20t10.png)  |
+| Edição de estilos de uma table          | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/edittablet10.png)  |
+
+
+
 ---
 [< Anterior](c2.md) | [Home](https://github.com/TIWM-Grupo5-2020/Project) | Proximo >
 :--- | :---: | ---: 
