--- a/doc/c3.md
+++ b/doc/c3.md
@@ -131,6 +131,19 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 
 
 
+### XML para HTML usando JS
+|  HTML | JS    |
+|:-----:|-------|
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/xmlhtmlt11.png) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/xmlhtmli2t11.png) |
+
+
+### MAnipulação de HTML usando JS
+| JS    |
+|-------|
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i1t12.png) |
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i2t12.png) |
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i3t12.png) |
+
 ---
 [< Anterior](c2.md) | [Home](https://github.com/TIWM-Grupo5-2020/Project) | Proximo >
 :--- | :---: | ---: 
