--- a/doc/c3.md
+++ b/doc/c3.md
@@ -145,5 +145,5 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i3t12.png) |
 
 ---
-[< Anterior](c2.md) | [Home](https://github.com/TIWM-Grupo5-2020/Project) | Proximo >
+[< Anterior](c2.md) | [Home](https://github.com/TIWM-Grupo5-2020/Project) | [Proximo >](c4.md)
 :--- | :---: | ---: 
