--- a/doc/c4.md
+++ b/doc/c4.md
@@ -4,3 +4,7 @@
 Devido ao github não aceitar ficheiros com mais de 25MB e o PowerPoint de apresentação ter +60MB é necessário fazer o download do mesmo através do link abaixo!
 
  [Download PP](https://meocloud.pt/link/9792717c-7ce0-49af-bf6c-f7b10003fd2f/c4.odp/) 
+
+---
+[< Anterior](c3.md) | [Home](https://github.com/TIWM-Grupo5-2020/Project) 
+:--- | :---: | ---: 
