--- a/doc/c3.md
+++ b/doc/c3.md
@@ -137,7 +137,7 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/xmlhtmlt11.png) | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/xmlhtmli2t11.png) |
 
 
-### MAnipulação de HTML usando JS
+### Manipulação de HTML usando JS
 | JS    |
 |-------|
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i1t12.png) |
