--- a/doc/c3.md
+++ b/doc/c3.md
@@ -144,6 +144,12 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i2t12.png) |
 | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i3t12.png) |
 
+### Elementos adicionais
+| Criação de um PDF a partir dos dados submetidos num formulário|
+|-------|
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i1t12.png) |
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i2t12.png) |
+| ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/i3t12.png) |
 ---
 [< Anterior](c2.md) | [Home](https://github.com/TIWM-Grupo5-2020/Project) | [Proximo >](c4.md)
 :--- | :---: | ---: 
