--- a/doc/c3.md
+++ b/doc/c3.md
@@ -113,7 +113,7 @@ A validação é feita toda atravez do HTML todos os campos são "required"/obri
 |     ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/formt9.png)       |   ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/formcodet9.png)     |
 
 
-### Seletores
+### CSS
 |                   nome                  | Código |
 |:---------------------------------------:|--------|
 | classe                                  | ![](https://github.com/TIWM-Grupo5-2020/Project/blob/master/srcproj/img/detalhes%20implementa%C3%A7%C3%A3o/classet10.png)  |
